font styles, background images for index.html

--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
 
   <body>
     <header class="main-header">
-      <a class="logo"><img src="img/logo.svg" width="154" height="64" alt="Логотип Глейси Шопа"></a>
+      <a class="logo" href="index.html"><img src="img/logo.svg" width="154" height="64" alt="Логотип Глейси Шопа"></a>
       <nav class="main-nav">
 
         <ul class="site-navigation">
