--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
   </head>
   <body>
     <header class="main-header">
-      <a class="logo"><img src="img/logo.svg" width="154" height="64" alt="Логотип Глейси Шопа"></a>
-      <nav class="main-nav">
+      <a class="main-header-logo"><img src="img/logo.svg" width="154" height="64" alt="Логотип Глейси Шопа"></a>
 
+      <nav class="main-navigation">
         <ul class="site-navigation">
-          <li class="site-subnavigation">
+          <li class="site-navigation-item">
             <a href="catalog.html">Каталог</a>
-            <ul class="site-subnavigation-list">
-              <li class="site-subnavigation-item"><a href="#"><b>Новинки</b></a></li>
-              <li class="site-subnavigation-item"><a href="#">Сливочное</a></li>
-              <li class="site-subnavigation-item"><a href="#">Щербеты</a></li>
-              <li class="site-subnavigation-item"><a href="#">Фруктовый лед</a></li>
-              <li class="site-subnavigation-item"><a href="#">Мелорин</a></li>
+            <ul class="site-subnavi-list">
+              <li class="site-subnavi-item"><a href="#"><b>Новинки</b></a></li>
+              <li class="site-subnavi-item"><a href="#">Сливочное</a></li>
+              <li class="site-subnavi-item"><a href="#">Щербеты</a></li>
+              <li class="site-subnavi-item"><a href="#">Фруктовый лед</a></li>
+              <li class="site-subnavi-item"><a href="#">Мелорин</a></li>
             </ul>
           </li>
-          <li><a href="#">Доставка и оплата</a></li>
-          <li><a href="#">О Компании</a></li>
+          <li class="site-navigation-item"><a href="#">Доставка и оплата</a></li>
+          <li class="site-navigation-item"><a href="#">О Компании</a></li>
         </ul>
 
         <div class="client-navigation">
           <ul class="client-navigation-list">
 
-            <li>
+            <li class="client-navigation-item">
               <a class="header-search" href="#"><span class="visually-hidden">Поиск</span></a>
               <form class="search-modal" action="https://echo.htmlacademy.ru" method="post">
                 <label class="visually-hidden" for="search-input">Поиск по сайту</label>
@@ -38,7 +38,7 @@
               </form>
             </li>
 
-            <li>
+            <li class="client-navigation-item">
               <a class="header-login" href="#">Вход</a>
               <form class="login-modal" action="https://echo.htmlacademy.ru" method="post">
                 <label class="visually-hidden" for="email-imput">Электронная почта</label>
@@ -53,7 +53,7 @@
               </form>
             </li>
 
-            <li>
+            <li class="client-navigation-item">
               <a class="header-basket" href="#"><span class="header-basket-text">Пусто</span></a>
             </li>
           </ul>
@@ -99,15 +99,15 @@
       <section class="announces">
         <h2 class="visually-hidden">Анонсы ангеботов</h2>
         <article class="announce-raspberry">
-          <h2>Малинка даром!</h2>
+          <h3>Малинка даром!</h2>
           <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-          <a class="button" href="">Хочу варенье!</a>
+          <a class="button announces-button" href="#">Хочу варенье!</a>
         </article>
 
         <article class="announce-chocolate">
-          <h2>Шоколадки даром!</h2>
+          <h3>Шоколадки даром!</h2>
           <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-          <a class="button" href="">Хочу шоколадки!</a>
+          <a class="button announces-button" href="#">Хочу шоколадки!</a>
         </article>
       </section>
 
@@ -116,23 +116,23 @@
         <ul class="offer-hits">
           <li class="offer-item">
             <img src="img/ice01.jpg" width="267" height="267" alt="Сливочное морожение">
-            <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
-            <p>310<span>Р/кг</span></p>
+            <a>Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+            <p class="offer-price">310&#x20bd<span>/кг</span></p>
           </li>
           <li class="offer-item">
             <img src="img/ice02.jpg" width="267" height="267" alt="Сливочно-кофейное морожение">
-            <p>Сливочно-кофейное с кусочками шоколада</p>
-            <p>380<span>Р/кг</span></p>
+            <a>Сливочно-кофейное с кусочками шоколада</a>
+            <p class="offer-price">380&#x20bd<span>/кг</span></p>
           </li>
           <li class="offer-item">
             <img src="img/ice03.jpg" width="267" height="267" alt="Сливочно-клубничное морожение">
-            <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
-            <p>355<span>Р/кг</span></p>
+            <a>Сливочно-клубничное с присыпкой из белого шоколада</a>
+            <p class="offer-price">355 &#x20bd<span>/кг</span></p>
           </li>
           <li class="offer-item">
             <img src="img/ice04.jpg" width="267" height="267" alt="Сливочное крем-брюле">
-            <p>Сливочное крем-брюле с карамельной подливкой</p>
-            <p>455<span>Р/кг</span></p>
+            <a>Сливочное крем-брюле с карамельной подливкой</a>
+            <p class="offer-price">455&#x20bd<span>/кг</span></p>
           </li>
         </ul>
       </section>
@@ -149,7 +149,7 @@
       </section>
 
       <div class="blog-newsletter">
-        <article>
+        <article class="blog-news">
           <h2 class="visually-hidden">Новости</h2>
           <b>Новое в нашем блоге</b>
           <h3><a href="">10 способов сервировки фруктовых щербетов к столу</a></h3>
@@ -158,24 +158,26 @@
         <section class="newsletter">
           <h2 class="visually-hidden">Рассылка</h2>
           <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) </p>
-          <form></form>
+          <form class="newsletter-form" action="https://echo.htmlacademy.ru" method="post">
+            <input type="email" name="email" placeholder="Электронная почта">
+            <a class="button newsletter-button" href="#">Отправить</a>
+          </form>
         </section>
       </div>
 
       <section class="map">
         <h2 class="visually-hidden">Глейси на карте</h2>
-        <!-- карта -->
-        <img src="img/map.jpg" width="1200" height="430" alt="Магазин Глейси на карте">
-        <section class="adress">
-          <h2>Адрес Глейси</h2>
-          <p>Адрес главного офиса <br>и офлайн-магазина:
-            <b>ул. Большая Конюшенная <br>19/8, Санкт-Петербург</b>
+        <img class="map-image" src="img/map.jpg" width="100%" height="auto" alt="Магазин Глейси на карте">
+        <section class="address">
+          <h2 class="visually-hidden">Адрес Глейси</h2>
+          <p class="address-map">Адрес главного офиса <br>и офлайн-магазина:
+            <b class="address-details">ул. Большая Конюшенная <br>19/8, Санкт-Петербург</b>
           </p>
-          <p>Для заказов по телефону:
+          <p class="address-map">Для заказов по телефону:
             <a class="telephone" href="tel:+78124502525">8 812 450-25-25</a>
-            (с 10 до 20 ежедневно)
+            <span class="hours-map">(с 10 до 20 ежедневно)</span>
           </p>
-          <a class="button-feedback" href="#">Форма обратной связи</a>
+          <a class="button button-feedback" href="#">Форма обратной связи</a>
 
           <!-- Popup with feedback form -->
           <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
@@ -197,10 +199,10 @@
       <section class="footer-social">
         <h2 class="visually-hidden">Глейси в социальных сетях</h2>
         <ul class="social-list">
-          <li class="social-item twitter"><a href="">Твитер</a></li>
-          <li class="social-item instagram"><a href="">Инстаграм</a></li>
-          <li class="social-item facebook"><a href="">Фейсбук</a></li>
-          <li class="social-item vkontakte"><a href="">Вконтакте</a></li>
+          <li class="social-item twitter"><a href="#"><span class="visually-hidden">Твитер</span></a></li>
+          <li class="social-item instagram"><a href="#"><span class="visually-hidden">Инстаграм</span></a></li>
+          <li class="social-item facebook"><a href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+          <li class="social-item vkontakte"><a href="#"><span class="visually-hidden">Вконтакте</span></a></li>
         </ul>
       </section>
 
