--- a/catalog.html
+++ b/catalog.html
@@ -14,8 +14,8 @@
       <nav class="main-nav">
 
         <ul class="site-navigation">
-          <li class="site-subnavigation">
-            <a href="catalog.html">Каталог</a>
+          <li class="site-navigation-item-active">
+            <a class="active" href="catalog.html">Каталог</a>
             <ul class="site-subnavigation-list">
               <li class="site-subnavigation-item"><a href="#"><b>Новинки</b></a></li>
               <li class="site-subnavigation-item"><a href="#">Сливочное</a></li>
@@ -24,14 +24,14 @@
               <li class="site-subnavigation-item"><a href="#">Мелорин</a></li>
             </ul>
           </li>
-          <li><a href="#">Доставка и оплата</a></li>
-          <li><a href="#">О Компании</a></li>
+          <li class="site-navigation-item"><a href="#">Доставка и оплата</a></li>
+          <li class="site-navigation-item"><a href="#">О Компании</a></li>
         </ul>
 
         <div class="client-navigation">
           <ul class="client-navigation-list">
 
-            <li>
+            <li class="client-navigation-item">
               <a class="header-search" href="#"><span class="visually-hidden">Поиск</span></a>
               <form class="search-modal" action="https://echo.htmlacademy.ru" method="post">
                 <label class="visually-hidden" for="search-input">Поиск по сайту</label>
@@ -39,7 +39,7 @@
               </form>
             </li>
 
-            <li>
+            <li class="client-navigation-item">
               <a class="header-login" href="#">Вход</a>
               <form class="login-modal" action="https://echo.htmlacademy.ru" method="post">
                 <label class="visually-hidden" for="email-imput">Электронная почта</label>
@@ -54,7 +54,7 @@
               </form>
             </li>
 
-            <li>
+            <li class="client-navigation-item">
               <a class="header-basket-full" href="#">
                 <span class="header-basket-text">2 товара</span>
               </a>
@@ -97,16 +97,16 @@
 
         <div class="header-info">
           <p class="opening-hours">С 10 до 20, ежедневно</p>
-          <p class="telephone" href="tel:+78124502525">8 812 450-25-25</p>
+          <p class="header-telephone" href="tel:+78124502525">8 812 450-25-25</p>
         </div>
       </nav>
     </header>
 
     <main>
       <ul class="breadcrubms">
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
-        <li><a>Сливочное</a></li>
+        <li><a class="breadcrubms-link" href="index.html">Главная</a></li>
+        <li><a class="breadcrubms-link" href="catalog.html">Каталог</a></li>
+        <li><a class="breadcrubms-link current">Сливочное</a></li>
       </ul>
 
       <section class="filters">
@@ -117,11 +117,11 @@
           <div class="form-first-row">
             <fieldset class="filter-sort">
               <legend class="form-head">Сортировка:</legend>
-              <select name="sorting">
-                <option value="popularity" selected>по популярности</option>
-                <option value="cheap">сначала недорогие</option>
-                <option value="expensive">сначала дорогие</option>
-                <option value="fat">по жирности</option>
+              <select class="form-sorting" name="sorting">
+                <option class="sorting-item" value="popularity" selected>по популярности</option>
+                <option class="sorting-item" value="cheap">сначала недорогие</option>
+                <option class="sorting-item" value="expensive">сначала дорогие</option>
+                <option class="sorting-item" value="fat">по жирности</option>
               </select>
             </fieldset>
 
@@ -133,16 +133,16 @@
             <fieldset class="filter-fat">
               <legend class="form-head">Жирность</legend>
               <input class="fat-input" type="radio" name="fat" id="zero">
-              <label for="zero">"0%"</label>
+              <label class="fat-number" for="zero">"0%"</label>
 
               <input class="fat-input" type="radio" name="fat" id="ten" checked>
-              <label for="ten">до 10%</label>
+              <label class="fat-number" for="ten">до 10%</label>
 
               <input class="fat-input" type="radio" name="fat" id="thirty">
-              <label for="thirty">до 30%</label>
+              <label class="fat-number" for="thirty">до 30%</label>
 
               <input class="fat-input" type="radio" name="fat" id="from-thirty">
-              <label for="from-thirty">выше 30%</label>
+              <label class="fat-number" for="from-thirty">выше 30%</label>
             </fieldset>
           </div>
 
@@ -150,19 +150,19 @@
             <fieldset class="filter-topping">
               <legend class="form-head">Наполнители:</legend>
               <input type="checkbox" name="chocolate" id="chocolate" checked>
-              <label for="chocolate">шоколадные</label>
+              <label class="topping-item" for="chocolate">шоколадные</label>
 
               <input type="checkbox" name="sugar-powder" id="sugar-powder" checked>
-              <label for="sugar-powder">сахарные присыпки</label>
+              <label class="topping-item" for="sugar-powder">сахарные присыпки</label>
 
               <input type="checkbox" name="fruits" id="fruits">
-              <label for="fruits">фрукты</label>
+              <label class="topping-item" for="fruits">фрукты</label>
 
               <input type="checkbox" name="sirup" id="sirup">
-              <label for="sirup">сиропы</label>
+              <label class="topping-item" for="sirup">сиропы</label>
 
               <input type="checkbox" name="jam" id="jam">
-              <label for="jam">джемы</label>
+              <label class="topping-item" for="jam">джемы</label>
             </fieldset>
             <button class="filter-button" type="submit">Применить</button>
           </div>
@@ -174,74 +174,74 @@
         <ul class="offers-list">
           <li class="offer-item">
             <img src="img/ice01.jpg" width="267" height="267" alt="Сливочное морожение">
-            <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
-            <p>310<span>&#8381;/кг</span></p>
+            <a>Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+            <p class="offer-price">310&#8381;<span>/кг</span></p>
           </li>
           <li class="offer-item">
             <img src="img/ice02.jpg" width="267" height="267" alt="Сливочно-кофейное морожение">
-            <p>Сливочно-кофейное с кусочками шоколада</p>
-            <p>380<span>&#8381;/кг</span></p>
+            <a>Сливочно-кофейное с кусочками шоколада</a>
+            <p class="offer-price">380&#8381;<span>/кг</span></p>
           </li>
           <li class="offer-item">
             <img src="img/ice03.jpg" width="267" height="267" alt="Сливочно-клубничное морожение">
-            <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
-            <p>355<span>&#8381;/кг</span></p>
+            <a>Сливочно-клубничное с присыпкой из белого шоколада</a>
+            <p class="offer-price">355&#8381;<span>/кг</span></p>
           </li>
           <li class="offer-item">
             <img src="img/ice04.jpg" width="267" height="267" alt="Сливочное крем-брюле">
-            <p>Сливочное крем-брюле с карамельной подливкой</p>
-            <p>455<span>&#8381;/кг</span></p>
+            <a>Сливочное крем-брюле с карамельной подливкой</a>
+            <p class="offer-price">455&#8381;<span>/кг</span></p>
           </li>
 
           <li class="offer-item">
             <img src="img/ice05.jpg" width="267" height="267" alt="Сливочное брусничное">
-            <p>Сливочное с брусничным джемом</p>
-            <p>325<span>&#8381;/кг</span></p>
+            <a>Сливочное с брусничным джемом</a>
+            <p class="offer-price">325&#8381;<span>/кг</span></p>
           </li>
           <li class="offer-item">
             <img src="img/ice06.jpg" width="267" height="267" alt="Сливочно-черничное морожение">
-            <p>Сливочно-черничное с цельными ягодами черники</p>
-            <p>410<span>&#8381;/кг</span></p>
+            <a>Сливочно-черничное с цельными ягодами черники</a>
+            <p class="offer-price">410&#8381;<span>/кг</span></p>
           </li>
           <li class="offer-item">
             <img src="img/ice07.jpg" width="267" height="267" alt="Сливочно-лимонное морожение">
-            <p>Сливочно-лимонное с карамельной присыпкой</p>
-            <p>375<span>&#8381;/кг</span></p>
+            <a>Сливочно-лимонное с карамельной присыпкой</a>
+            <p class="offer-price">375&#8381;<span>/кг</span></p>
           </li>
           <li class="offer-item">
             <img src="img/ice08.jpg" width="267" height="267" alt="Сливочное с шоколадом">
-            <p>Сливочное с шоколадной стружкой</p>
-            <p>320<span>&#8381;/кг</span></p>
+            <a>Сливочное с шоколадной стружкой</a>
+            <p class="offer-price">320&#8381;<span>/кг</span></p>
           </li>
 
           <li class="offer-item">
             <img src="img/ice09.jpg" width="267" height="267" alt="Сливочное-ванильное морожение">
-            <p>Сливочно-ванильное с кусочками шоколада</p>
-            <p>440<span>&#8381;/кг</span></p>
+            <a>Сливочно-ванильное с кусочками шоколада</a>
+            <p class="offer-price">440&#8381;<span>/кг</span></p>
           </li>
           <li class="offer-item">
             <img src="img/ice10.jpg" width="267" height="267" alt="Сливочно-ментоловое морожение">
-            <p>Сливочно с ментоловым сиропом</p>
-            <p>435<span>&#8381;/кг</span></p>
+            <a>Сливочно с ментоловым сиропом</a>
+            <p class="offer-price">435&#8381;<span>/кг</span></p>
           </li>
           <li class="offer-item">
             <img src="img/ice11.jpg" width="267" height="267" alt="Сливочное с шоколадом морожение">
-            <p>Сливочное с кусочками черного шоколада</p>
-            <p>355<span>&#8381;/кг</span></p>
+            <a>Сливочное с кусочками черного шоколада</a>
+            <p class="offer-price">355&#8381;<span>/кг</span></p>
           </li>
           <li class="offer-item">
             <img src="img/ice12.jpg" width="267" height="267" alt="Сливочное-мятное">
-            <p>Сливочное с мятным сиропом</p>
-            <p>420<span>&#8381;/кг</span></p>
+            <a>Сливочное с мятным сиропом</a>
+            <p class="offer-price">420&#8381;<span>/кг</span></p>
           </li>
         </ul>
       </section>
 
-      <section class="pagination-wrapper">
+      <section class="pagination">
         <h2 class="visually-hidden">Страницы каталога</h2>
-        <ul class="pagination">
+        <ul class="pagination-list">
           <li class="pagination-item"><a href="#">&lt;</a></li>
-          <li class="pagination-item"><a href="#">1</a></li>
+          <li class="pagination-item active"><a href="#">1</a></li>
           <li class="pagination-item"><a href="#">2</a></li>
           <li class="pagination-item"><a href="#">3</a></li>
           <li class="pagination-item"><a href="#">4</a></li>
@@ -256,10 +256,10 @@
       <section class="footer-social">
         <h2 class="visually-hidden">Глейси в социальных сетях</h2>
         <ul class="social-list">
-          <li class="social-item twitter"><a href="">Твитер</a></li>
-          <li class="social-item instagram"><a href="">Инстаграм</a></li>
-          <li class="social-item facebook"><a href="">Фейсбук</a></li>
-          <li class="social-item vkontakte"><a href="">Вконтакте</a></li>
+          <li class="social-item twitter"><a href="#"><span class="visually-hidden">Твитер</span></a></li>
+          <li class="social-item instagram"><a href="#"><span class="visually-hidden">Инстаграм</span></a></li>
+          <li class="social-item facebook"><a href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+          <li class="social-item vkontakte"><a href="#"><span class="visually-hidden">Вконтакте</span></a></li>
         </ul>
       </section>
 
