--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <div class="header-info">
           <p class="opening-hours">С 10 до 20, ежедневно</p>
-          <p class="telephone" href="tel:+78124502525">8 812 450-25-25</p>
+          <p class="header-telephone" href="tel:+78124502525">8 812 450-25-25</p>
         </div>
       </nav>
     </header>
