--- a/catalog.html
+++ b/catalog.html
@@ -173,64 +173,88 @@
         <h2 class="visually-hidden">Каталог мороженок</h2>
         <ul class="offers-list">
           <li class="offer-item">
-            <img src="img/ice01.jpg" width="267" height="267" alt="Сливочное морожение">
+            <div class="offer-image-wrapper">
+              <img src="img/ice01.jpg" width="267" height="267" alt="Сливочное морожение">
+            </div>
             <a>Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
             <p class="offer-price">310&#8381;<span>/кг</span></p>
           </li>
           <li class="offer-item">
-            <img src="img/ice02.jpg" width="267" height="267" alt="Сливочно-кофейное морожение">
+            <div class="offer-image-wrapper">
+              <img src="img/ice02.jpg" width="267" height="267" alt="Сливочно-кофейное морожение">
+            </div>
             <a>Сливочно-кофейное с кусочками шоколада</a>
             <p class="offer-price">380&#8381;<span>/кг</span></p>
           </li>
           <li class="offer-item">
-            <img src="img/ice03.jpg" width="267" height="267" alt="Сливочно-клубничное морожение">
+            <div class="offer-image-wrapper">
+              <img src="img/ice03.jpg" width="267" height="267" alt="Сливочно-клубничное морожение">
+            </div>
             <a>Сливочно-клубничное с присыпкой из белого шоколада</a>
             <p class="offer-price">355&#8381;<span>/кг</span></p>
           </li>
           <li class="offer-item">
-            <img src="img/ice04.jpg" width="267" height="267" alt="Сливочное крем-брюле">
+            <div class="offer-image-wrapper">
+              <img src="img/ice04.jpg" width="267" height="267" alt="Сливочное крем-брюле">
+            </div>
             <a>Сливочное крем-брюле с карамельной подливкой</a>
             <p class="offer-price">455&#8381;<span>/кг</span></p>
           </li>
 
           <li class="offer-item">
-            <img src="img/ice05.jpg" width="267" height="267" alt="Сливочное брусничное">
+            <div class="offer-image-wrapper">
+              <img src="img/ice05.jpg" width="267" height="267" alt="Сливочное брусничное">
+            </div>
             <a>Сливочное с брусничным джемом</a>
             <p class="offer-price">325&#8381;<span>/кг</span></p>
           </li>
           <li class="offer-item">
-            <img src="img/ice06.jpg" width="267" height="267" alt="Сливочно-черничное морожение">
+            <div class="offer-image-wrapper">
+              <img src="img/ice06.jpg" width="267" height="267" alt="Сливочно-черничное морожение">
+            </div>
             <a>Сливочно-черничное с цельными ягодами черники</a>
             <p class="offer-price">410&#8381;<span>/кг</span></p>
           </li>
           <li class="offer-item">
-            <img src="img/ice07.jpg" width="267" height="267" alt="Сливочно-лимонное морожение">
+            <div class="offer-image-wrapper">
+              <img src="img/ice07.jpg" width="267" height="267" alt="Сливочно-лимонное морожение">
+            </div>
             <a>Сливочно-лимонное с карамельной присыпкой</a>
             <p class="offer-price">375&#8381;<span>/кг</span></p>
           </li>
           <li class="offer-item">
-            <img src="img/ice08.jpg" width="267" height="267" alt="Сливочное с шоколадом">
+            <div class="offer-image-wrapper">
+              <img src="img/ice08.jpg" width="267" height="267" alt="Сливочное с шоколадом">
+            </div>
             <a>Сливочное с шоколадной стружкой</a>
             <p class="offer-price">320&#8381;<span>/кг</span></p>
           </li>
 
           <li class="offer-item">
-            <img src="img/ice09.jpg" width="267" height="267" alt="Сливочное-ванильное морожение">
+            <div class="offer-image-wrapper">
+              <img src="img/ice09.jpg" width="267" height="267" alt="Сливочное-ванильное морожение">
+            </div>
             <a>Сливочно-ванильное с кусочками шоколада</a>
             <p class="offer-price">440&#8381;<span>/кг</span></p>
           </li>
           <li class="offer-item">
-            <img src="img/ice10.jpg" width="267" height="267" alt="Сливочно-ментоловое морожение">
+            <div class="offer-image-wrapper">
+              <img src="img/ice10.jpg" width="267" height="267" alt="Сливочно-ментоловое морожение">
+            </div>
             <a>Сливочно с ментоловым сиропом</a>
             <p class="offer-price">435&#8381;<span>/кг</span></p>
           </li>
           <li class="offer-item">
-            <img src="img/ice11.jpg" width="267" height="267" alt="Сливочное с шоколадом морожение">
+            <div class="offer-image-wrapper">
+              <img src="img/ice11.jpg" width="267" height="267" alt="Сливочное с шоколадом морожение">
+            </div>
             <a>Сливочное с кусочками черного шоколада</a>
             <p class="offer-price">355&#8381;<span>/кг</span></p>
           </li>
           <li class="offer-item">
-            <img src="img/ice12.jpg" width="267" height="267" alt="Сливочное-мятное">
+            <div class="offer-image-wrapper">
+              <img src="img/ice12.jpg" width="267" height="267" alt="Сливочное-мятное">
+            </div>
             <a>Сливочное с мятным сиропом</a>
             <p class="offer-price">420&#8381;<span>/кг</span></p>
           </li>
@@ -240,13 +264,13 @@
       <section class="pagination">
         <h2 class="visually-hidden">Страницы каталога</h2>
         <ul class="pagination-list">
-          <li class="pagination-item"><a href="#">&lt;</a></li>
-          <li class="pagination-item active"><a href="#">1</a></li>
+          <li class="pagination-item"><a class="previous disabled" href="#">&lt;</a></li>
+          <li class="pagination-item"><a class="current" href="#">1</a></li>
           <li class="pagination-item"><a href="#">2</a></li>
           <li class="pagination-item"><a href="#">3</a></li>
           <li class="pagination-item"><a href="#">4</a></li>
           <li class="pagination-item"><a href="#">5</a></li>
-          <li class="pagination-item"><a href="#">&gt;</a></li>
+          <li class="pagination-item"><a class="next" href="#">&gt;</a></li>
         </ul>
       </section>
     </main>
