--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
               <ul class="client-navigation-list">
 
                 <li class="client-navigation-item">
-                  <a class="header-search" href="#"><span class="visually-hidden">Поиск</span></a>
+                  <a class="header-search" href="#">
+                    <span class="visually-hidden">Поиск</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="17" viewBox="0 0 17 17"><path fill="#fff" d="M16.958 15.527L11.75 10.32A6.455 6.455 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13a6.465 6.465 0 0 0 3.839-1.263l5.205 5.204 1.414-1.414zM6.5 11C4.019 11 2 8.981 2 6.5S4.019 2 6.5 2 11 4.019 11 6.5 8.981 11 6.5 11z"/></svg>
+                  </a>
                   <form class="search-modal" action="https://echo.htmlacademy.ru" method="post">
                     <label class="visually-hidden" for="search-input">Поиск по сайту</label>
                     <input class="search-input-field" type="search" name="search" id="search-input" placeholder="Что ищем?">
@@ -43,22 +46,28 @@
                 </li>
 
                 <li class="client-navigation-item">
-                  <a class="header-login" href="#">Вход</a>
+                  <a class="header-login" href="#"><span class="header-login-text">Вход</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="21" height="19" viewBox="0 0 21 19"><g fill="#000"><path d="M6 14.875L12.917 9.5 6 4.125v2.917H-.042v4.917H6z"/><path d="M18 0H5C3.9 0 3 .9 3 2v2h2V2h13v15H5v-2H3v2c0 1.1.9 2 2 2h13c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2z"/></g></svg>
+                  </a>
                   <form class="login-modal" action="https://echo.htmlacademy.ru" method="post">
                     <label class="visually-hidden" for="email-imput">Электронная почта</label>
                     <input class="client-navigation-input" type="email" name="email" id="email-imput" placeholder="Электронная почта" required>
                     <label class="visually-hidden" for="password-input">Пароль</label>
                     <input class="client-navigation-input" type="password" name="password" id="password-input" placeholder="Пароль" required>
-                    <button class="button-enter" type="submit">Войти</button>
-                    <p class="client-navigation-links">
-                      <a href="#">Забыли пароль?</a>
-                      <a href="#">Новая регистрация</a>
-                    </p>
+                    <div class="login-modal-actions">
+                      <button class="button button-enter" type="submit">Войти</button>
+                      <p class="client-navigation-links">
+                        <a href="#">Забыли пароль?</a>
+                        <a href="#">Новая регистрация</a>
+                      </p>
+                    </div>
                   </form>
                 </li>
 
                 <li class="client-navigation-item">
-                  <a class="header-basket" href="#"><span class="header-basket-text">Пусто</span></a>
+                  <a class="header-basket" href="#"><span class="header-basket-text">Пусто</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20"><g fill="#FFF"><path d="M5.657 2.031L5.422 0H0v2h3.64l1.5 13h13.988l1.699-12.969H5.657zM17.372 13H6.922L5.888 4.031h12.66L17.372 13z"/><circle cx="6.984" cy="18" r="2"/><circle cx="15.984" cy="18" r="2"/></g></svg>
+                  </a>
                 </li>
               </ul>
             </div>
