--- a/catalog.html
+++ b/catalog.html
@@ -18,9 +18,9 @@
               <li class="site-navigation-item site-navigation-item-active">
                 <a class="active" href="#">Каталог</a>
                 <ul class="site-subnavi-list">
-                  <li class="site-subnavi-item"><a href="#"><b>Новинки</b></a></li>
+                  <li class="site-subnavi-item site-subnavi-item-new"><a href="#"><b>Новинки</b></a></li>
                   <li class="site-subnavi-item"><a href="#">Сливочное</a></li>
-                  <li class="site-subnavi-item"><a href="#">Щербеты</a></li>
+                  <li class="site-subnavi-item site-subnavi-item-active"><a href="#">Щербеты</a></li>
                   <li class="site-subnavi-item"><a href="#">Фруктовый лед</a></li>
                   <li class="site-subnavi-item"><a href="#">Мелорин</a></li>
                 </ul>
@@ -310,10 +310,10 @@
         <section class="footer-social">
           <h2 class="visually-hidden">Глейси в социальных сетях</h2>
           <ul class="social-list">
-            <li class="social-item twitter"><a href="#"><span class="visually-hidden">Твитер</span></a></li>
-            <li class="social-item instagram"><a href="#"><span class="visually-hidden">Инстаграм</span></a></li>
-            <li class="social-item facebook"><a href="#"><span class="visually-hidden">Фейсбук</span></a></li>
-            <li class="social-item vkontakte"><a href="#"><span class="visually-hidden">Вконтакте</span></a></li>
+            <li class="social-item twitter"><a href="https://twitter.com/htmlacademy_ru" target="_blank"><span class="visually-hidden">Твитер</span></a></li>
+            <li class="social-item instagram"><a href="https://www.instagram.com/htmlacademy/" target="_blank"><span class="visually-hidden">Инстаграм</span></a></li>
+            <li class="social-item facebook"><a href="https://www.facebook.com/htmlacademy/" target="_blank"><span class="visually-hidden">Фейсбук</span></a></li>
+            <li class="social-item vkontakte"><a href="https://vk.com/htmlacademy" target="_blank"><span class="visually-hidden">Вконтакте</span></a></li>
           </ul>
         </section>
 
