filter is ready at catalog.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                   <ul class="site-subnavi-list">
                     <li class="site-subnavi-item site-subnavi-item-new"><a href="#"><b>Новинки</b></a></li>
                     <li class="site-subnavi-item"><a href="#">Сливочное</a></li>
-                    <li class="site-subnavi-item"><a href="#">Щербеты</a></li>
+                    <li class="site-subnavi-item site-subnavi-item-active"><a href="#">Щербеты</a></li>
                     <li class="site-subnavi-item"><a href="#">Фруктовый лед</a></li>
                     <li class="site-subnavi-item"><a href="#">Мелорин</a></li>
                   </ul>
